fix: body overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,3 @@
   font-family: 'Spline Sans', sans-serif;
 }
 
-body {
-  overflow: hidden;
-}
-
